--- a/design_opt/cfg/box2d_chain.yml
+++ b/design_opt/cfg/box2d_chain.yml
@@ -1,4 +1,4 @@
-env_name: hopper
+env_name: box2d_chain
 agent_specs:
   batch_design: true
 # training parameters
@@ -53,10 +53,10 @@ value_lr: 3.e-4
 value_momentum: 0.0
 value_weightdecay: 0.0
 clip_epsilon: 0.2
-min_batch_size: 5000 # 50000
-mini_batch_size: 200 # 2048
+min_batch_size: 50000
+mini_batch_size: 2048
 num_optim_epoch: 10
-max_epoch_num: 100 # 1000
+max_epoch_num: 1000
 seed: 1
 save_model_interval: 100
 
